salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/OSFMX_Quote_Consu__c.object-meta.xml
<CustomObject>
    <description>Registro Manual de Consumos de clientes</description>
    <label>Registro Manual Consumo</label>
    <nameField>
        <label>Centro de carga</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registro Manual Consumo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>