salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/ConsumoMes10__c.field-meta.xml
<CustomField>
    <fullName>ConsumoMes10__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Mes 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>