salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/ConsumoMes12__c.field-meta.xml
<CustomField>
    <fullName>ConsumoMes12__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>0.00</description>
    <label>Mes 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>