salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/Desviacion_Estandar__c.field-meta.xml
<CustomField>
    <fullName>Desviacion_Estandar__c</fullName>
    <label>Desviacion Estandar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>