salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/OSFMX_Base__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Base__c</fullName>
    <label>Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>