salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/OSFMX_Intermedio__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Intermedio__c</fullName>
    <label>Intermedio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>