salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/OSFMX_Punta__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Punta__c</fullName>
    <label>Punta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>