salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/Porcentaje_Volatilidad__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Volatilidad__c</fullName>
    <label>Porcentaje Volatilidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>