salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/Promedio__c.field-meta.xml
<CustomField>
    <fullName>Promedio__c</fullName>
    <formula>(
ConsumoMes1__c +
ConsumoMes2__c + 
ConsumoMes3__c + 
ConsumoMes4__c +
ConsumoMes5__c +
ConsumoMes6__c +
ConsumoMes7__c +
ConsumoMes8__c +
ConsumoMes9__c +
ConsumoMes10__c +
ConsumoMes11__c +
ConsumoMes12__c
) / (12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>