salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Registro Manual Consumo</relationshipLabel>
    <relationshipName>Registro_Manual_Consumo</relationshipName>
    <type>Lookup</type>
</CustomField>