salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>OSFMX_Punta__c +  OSFMX_Intermedio__c +  OSFMX_Base__c +  OSFMX_Semipunta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>