salesforce_sfdx/main/default/objects/OSFMX_Quote_Consu__c/fields/Volatilidad__c.field-meta.xml
<CustomField>
    <fullName>Volatilidad__c</fullName>
    <label>Volatilidad</label>
    <length>10</length>
    <type>Text</type>
</CustomField>